Update dependencies versions and small clean ups